force-app/main/default/objects/Sports_Registration__c/Sports_Registration__c.object-meta.xml
<CustomObject>
    <label>Sports Registration</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sports Registration Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>