force-app/main/default/objects/Sports_Registration__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>