force-app/main/default/objects/Sports_Registration__c/fields/Number_of_Players__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Players__c</fullName>
    <label>Number of Players</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>