force-app/main/default/objects/Sports_Registration__c/fields/Player_Names__c.field-meta.xml
<CustomField>
    <fullName>Player_Names__c</fullName>
    <label>Player Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>