force-app/main/default/objects/Sports_Registration__c/fields/Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee__c</fullName>
    <description>Registration fee For Sports</description>
    <label>Registration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>