force-app/main/default/objects/Sports_Registration__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Kabaddi</fullName>
            </value>
            <value>
                <fullName>Volley Ball</fullName>
            </value>
            <value>
                <fullName>Throw Ball</fullName>
            </value>
            <value>
                <fullName>Basket Ball</fullName>
            </value>
            <value>
                <fullName>Tennikoit</fullName>
            </value>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>Kho-Kho</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Tug of War</fullName>
            </value>
            <value>
                <fullName>Carroms</fullName>
            </value>
            <value>
                <fullName>Table-Tennis</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>